--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">SQLite App</string>
+    <string name="marks">Marks</string>
+    <string name="surname">SurName</string>
+    <string name="name">Name</string>
+    <string name="add_data">Add Data</string>
+    <string name="id">ID</string>
+    <string name="delete">Delete</string>
+    <string name="update">UPDATE</string>
+    <string name="view_all">View All</string>
+    <string name="enter_name">Enter Name</string>
+    <string name="enter_marks">Enter Marks</string>
+    <string name="enter_surname">Enter SurName</string>
+    <string name="enter_id">Enter ID</string>
 </resources>
